--- a/styles/newcastle.css
+++ b/styles/newcastle.css
@@ -60,20 +60,20 @@ h5 {
 	justify-content: space-evenly;
 }
 
-.places div {
+.places figure {
   position: relative;
   box-shadow: -15px -18px 19px 1px rgba(220, 15, 15, 0.5);
   overflow: hidden;
   border-radius: 15px;
 }
 
-.places div:hover {
+.places figure:hover {
   transform: translateY(-15px);
   transition: transform 0.8s ease;
   box-shadow: -15px -18px 19px 1px rgba(11, 9, 9, 0.5);
 }
 
-.places div img {
+.places figure img {
   width: 100%;
   height: 200px; 
   object-fit: cover; 
@@ -219,14 +219,14 @@ header {
 footer {
 	background: #1f2937;
 	color: #e5e7fb;
-	margin-top: 2.4rem;
+	font-size: 1.5rem;
 }
 
 footer p {
 	margin-top: 2.4rem;
 }
 
-footer div{
+footer nav{
 	gap: 1.2rem;
 	margin-top: 1.2rem;
 	padding: 1.2rem 0;
@@ -240,4 +240,14 @@ footer div{
 
 .flex-column{
 	flex-direction: column;
+}
+
+.icon {
+	font-size: 1.8rem;
+	color: #e5e7fb;
+}
+
+.icon:hover {
+	color: #3882f6;
+
 }
