--- a/styles/newcastle.css
+++ b/styles/newcastle.css
@@ -65,6 +65,8 @@ h5 {
   box-shadow: -15px -18px 19px 1px rgba(220, 15, 15, 0.5);
   overflow: hidden;
   border-radius: 15px;
+  width: 100%;
+  height: 300px;
 }
 
 .places figure:hover {
@@ -75,7 +77,7 @@ h5 {
 
 .places figure img {
   width: 100%;
-  height: 200px; 
+  height: 100%; 
   object-fit: cover; 
   object-position: center; 
 }
