--- a/styles/telaviv.css
+++ b/styles/telaviv.css
@@ -10,7 +10,7 @@
     font-family: "Roboto", sans-serif;
 }
 
-html {
+html ,body{
     font-size: 62.5%;
 }
 
@@ -31,14 +31,12 @@ html {
 }
 
 section {
-    width: 100%;
     padding: 2rem;
 
 }
 
 main {
     content: "";
-    width: 100dvw;
     margin-top: 48px;
     min-height: calc(100dvh - 48px);
     display: flex;
@@ -78,7 +76,7 @@ nav {
 .anchor-container {
     display: flex;
     gap: 2.4rem;
-    padding-right: 2.4rem;
+    
 }
 
 .anchor-container a {
@@ -89,7 +87,6 @@ nav {
 
 .anchor-container a.current-page {
     font-weight: bold;
-    font-size: 2rem;
     pointer-events: none;
 }
 
@@ -109,18 +106,18 @@ nav {
 }
 
 .anchor-container a:hover::after {
-    width: 100%;
     background-color: #3882f6;
 }
 
 
 .hero {
     background-color: #1F2937;
-    height: 300px;
+    height: 500px;
     display: flex;
     justify-content: space-between;
     align-items: stretch;
     flex-direction: row;
+    padding: 64px;
     gap: 8px;
 
     .info {
@@ -142,7 +139,8 @@ nav {
     }
 
     img {
-        height: 100%;
+        aspect-ratio: 1/1;
+        max-width: 40%;
         border-radius: 12px;
     }
 
@@ -165,16 +163,16 @@ nav {
 
 
 .cards {
-    height: 400px;
+    min-height: 400px;
     .title {
         text-align: center;
         font-weight: bolder;
         color: #1F2937;
         font-size: 36px;
+        margin-bottom: 12px;
     }
 
     .holder {
-        width: 100%;
         height: 100%;
         display: flex;
         flex-direction: row;
@@ -224,6 +222,7 @@ nav {
     color: #1f2937;
     font-size: 36px;
     font-style: italic;
+    padding: 12px 64px 12px 64px;
     .author{
         width: 100%;
         display: inline-block;
@@ -236,8 +235,8 @@ nav {
 .call-action{
     height: 300px;
     padding: 64px;
-    div{
-        padding: 0 64px 0 64px;
+    legend{
+        padding: 0 32px 0 32px;
         background-color: #3882f6;
         border-radius: 16px;
         width: 100%;
@@ -247,6 +246,7 @@ nav {
         justify-content: space-between;
         align-items: center;
         color:#F9FAF8;
+        gap: 12px;
         p{
             font-size: 16px;
         }
@@ -279,12 +279,11 @@ nav {
 
 footer {
     bottom: 0px;
-    width: 100dvw;
-    background: #1e63d2;
+    background: #1F2937;
     color: #e5e7fb;
-    height: 4.8rem;
     font-size: 1.5rem;
 }
+
 
 @media(max-width:768px){
     nav{
@@ -300,12 +299,38 @@ footer {
     .logo-container {
 		font-size: 1.8rem;
 	}
-    .current-page{
-        font-size: 1.4rem;
-    }
+
     .hero
     {
         flex-direction: column;
         height: fit-content;
+        justify-content: center;
+        align-items: center;
+        img{
+            max-width: 60%;
+        }
+    }
+
+    .cards{
+        height: fit-content;
+        .holder{
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            justify-items: center;
+        }
+        .card{
+            width: 60%;
+        }
+    }
+
+    .call-action{
+        legend{
+            flex-direction: column;
+            height: fit-content;
+            gap:12px;
+            padding: 12px;
+        }
     }
 }
+
+
