--- a/styles/newcastle.css
+++ b/styles/newcastle.css
@@ -26,10 +26,16 @@ body {
 
 h1 {
 	font-size: 2.5rem;
+	padding-top: 30px;
+	padding-bottom: 10px;
+	padding-left: 50px;
 }
 
 h3 {
 	font-size: 1.8rem;
+	padding-left: 50px;
+	padding-right: 50px;
+	padding-bottom: 30px;
 }
 main {
 	padding-top: 60px;
@@ -43,6 +49,8 @@ h5 {
 
 .words {
 	background-color: #1f2937;
+	font-size: 15px;
+	padding-left: 10px;
 }
 
 /* Main image */
@@ -51,6 +59,8 @@ h5 {
 	height: auto;
 	display: block;
 	margin: 0 auto;
+	padding-left: 50px;
+	padding-right: 50px;
 }
 
 /* Places Styles */
