--- a/styles/brussels.css
+++ b/styles/brussels.css
@@ -229,6 +229,7 @@ h2 {
 .person-info h5 {
   font-size: 25px;
   padding-bottom: 20px;
+  color: white;
 }
 .testimony-text h4 {
   font-size: 20px;
