--- a/styles/newcastle.css
+++ b/styles/newcastle.css
@@ -60,11 +60,18 @@ h5 {
 .main-image {
 	max-width: 100%;
 	height: auto;
-	display: block;
+	display: flex;
 	margin: 0 auto;
 	padding-left: 50px;
 	padding-right: 50px;
-	padding-top: 50px;
+	padding-bottom: 20px;
+}
+
+.main-image-top {
+	max-width: 100%;
+	height: auto;
+	display: block;
+	margin: 0 auto;
 }
 
 /* Places Styles */
