--- a/styles/newcastle.css
+++ b/styles/newcastle.css
@@ -74,6 +74,26 @@ h5 {
 	margin: 0 auto;
 }
 
+.main-image-james {
+	max-width: 100%;
+	height: 800px;
+	display: flex;
+	margin: 0 auto;
+	padding-left: 50px;
+	padding-right: 50px;
+	padding-bottom: 20px;
+}
+
+.main-image-cath {
+	max-width: 100%;
+	height: 800px;
+	display: flex;
+	margin: 0 auto;
+	padding-left: 50px;
+	padding-right: 50px;
+	padding-bottom: 20px;
+}
+
 /* Places Styles */
 .places {
 	padding: 35px;
@@ -230,6 +250,12 @@ header {
 	}
 	.anchor-container a.current-page {
 		font-size: 1.6rem;
+	}
+	.main-image,
+	.main-image-cath,
+	.main-image-james {
+		height: auto;
+		width: auto;
 	}
 }
 /* Footer */
