--- a/styles/newcastle.css
+++ b/styles/newcastle.css
@@ -11,43 +11,20 @@ html {
 	font-size: 62.5%;
 	scroll-behavior: smooth;
 }
-.flex-center {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-}
-.flex-column {
-	flex-direction: column;
-}
+
 body {
 	margin-top: 0;
 	background-color: #335a82;
+	color: whitesmoke;
 }
 
-h1 {
+h1, h3, h5 {
 	font-size: 2.5rem;
-	padding-top: 30px;
-	padding-bottom: 10px;
-	padding-left: 50px;
-	padding-right: 50px;
+	padding: 30px 50px 10px;
 }
 
 h3 {
-	font-size: 1.8rem;
-	padding-left: 50px;
-	padding-right: 50px;
 	padding-bottom: 30px;
-}
-
-main {
-	padding-top: 60px;
-	
-}
-
-h1,
-h3,
-h5 {
-	color: whitesmoke;
 }
 
 .words {
@@ -57,44 +34,16 @@ h5 {
 }
 
 /* Main image */
-.main-image {
-	max-width: 100%;
-	height: auto;
-	display: flex;
-	margin: 0 auto;
-	padding-left: 50px;
-	padding-right: 50px;
-	padding-bottom: 20px;
-}
-
-.main-image-top {
-	max-width: 100%;
-	height: auto;
-	display: block;
-	margin: 0 auto;
-}
-
-.main-image-james {
-	max-width: 100%;
-	height: 800px;
-	display: flex;
-	margin: 0 auto;
-	padding-left: 50px;
-	padding-right: 50px;
-	padding-bottom: 20px;
-}
-
+.main-image,
+.main-image-james,
 .main-image-cath {
 	max-width: 100%;
-	height: 800px;
+	height: auto;
 	display: flex;
 	margin: 0 auto;
-	padding-left: 50px;
-	padding-right: 50px;
-	padding-bottom: 20px;
+	padding: 20px 50px;
 }
 
-/* Places Styles */
 .places {
 	padding: 35px;
 	display: flex;
@@ -102,25 +51,25 @@ h5 {
 }
 
 .places figure {
-  position: relative;
-  box-shadow: -15px -18px 19px 1px rgba(87, 15, 220, 0.5);
-  overflow: hidden;
-  border-radius: 15px;
-  width: 100%;
-  height: 300px;
+	position: relative;
+	box-shadow: -15px -18px 19px 1px rgba(87, 15, 220, 0.5);
+	overflow: hidden;
+	border-radius: 15px;
+	width: 100%;
+	height: 300px;
 }
 
 .places figure:hover {
-  transform: translateY(-15px);
-  transition: transform 0.8s ease;
-  box-shadow: -15px -18px 19px 1px rgba(11, 9, 9, 0.5);
+	transform: translateY(-15px);
+	transition: transform 0.8s ease;
+	box-shadow: -15px -18px 19px 1px rgba(11, 9, 9, 0.5);
 }
 
 .places figure img {
-  width: 100%;
-  height: 100%; 
-  object-fit: cover; 
-  object-position: center; 
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	object-position: center;
 }
 
 /* Header */
@@ -145,12 +94,14 @@ header {
 	gap: 2.4rem;
 	padding-right: 2.4rem;
 }
+
 .anchor-container a {
 	text-decoration: none;
 	color: #e5e7eb;
 	font-size: 1.8rem;
 	position: relative;
 }
+
 .current-page {
 	font-weight: bold;
 	font-size: 2rem;
@@ -160,6 +111,7 @@ header {
 .anchor-container a:hover {
 	color: #3882f6;
 }
+
 .anchor-container a::after {
 	content: "";
 	width: 0;
@@ -170,94 +122,12 @@ header {
 	bottom: -1px;
 	transition: all 300ms;
 }
+
 .anchor-container a:hover::after {
 	width: 100%;
 	background-color: #3882f6;
 }
 
-/* Header */
-@media (max-width: 1200px) {
-	.populars-container {
-		gap: 5rem;
-	}
-	.cta-section {
-		margin: 0 5rem 6.8rem 5rem;
-	}
-}
-
-@media (max-width: 992px) {
-	.populars-container {
-		gap: 2rem;
-	}
-}
-
-@media(max-width:780px){
-	.navigation{
-		margin: 0;
-		justify-content: center;
-		flex-direction: column;
-		padding: 0;
-		padding-top: 1.2rem;
-		gap: 1.2rem;
-	}
-	.hero-text-container{
-		margin-right: 2rem;
-		text-align: center;
-	}
-	.section-hero{
-		display: grid;
-		grid-template-rows:repeat(2, 1fr);
-		gap: 2.4rem;
-	}
-	.cta-section{
-		display: grid;
-		grid-template-rows: repeat(2, 1fr);	
-	}
-	.cta-section button{
-		margin-top: 2.4rem;
-	}
-	.anchor-container{
-		padding-right: 0;
-	}
-	.logo-container p{
-		font-size: 1.8rem;
-	}
-	.anchor-container a{
-		font-size: 1.2rem;
-	}
-	.anchor-container a:first-child{
-		font-size: 1.6rem;
-	}
-	
-}
-
-@media (max-width: 768px) {
-	header {
-		margin: 0;
-		justify-content: center;
-		flex-direction: column;
-		padding-top: 1.2rem;
-		gap: 1.2rem;
-	}
-	.anchor-container {
-		padding-right: 0;
-	}
-	.logo-container a {
-		font-size: 1.8rem;
-	}
-	.anchor-container a {
-		font-size: 1.2rem;
-	}
-	.anchor-container a.current-page {
-		font-size: 1.6rem;
-	}
-	.main-image,
-	.main-image-cath,
-	.main-image-james {
-		height: auto;
-		width: auto;
-	}
-}
 /* Footer */
 footer {
 	background: #1f2937;
@@ -269,20 +139,13 @@ footer p {
 	margin-top: 2.4rem;
 }
 
-footer nav{
+footer nav {
 	gap: 1.2rem;
 	margin-top: 1.2rem;
 	padding: 1.2rem 0;
-}
-
-.flex-center{
 	display: flex;
 	justify-content: center;
 	align-items: center;
-}
-
-.flex-column{
-	flex-direction: column;
 }
 
 .icon {
@@ -292,5 +155,4 @@ footer nav{
 
 .icon:hover {
 	color: #3882f6;
-
 }
