--- a/styles/telaviv.css
+++ b/styles/telaviv.css
@@ -46,10 +46,11 @@ main {
 }
 
 .main-image-top {
-	width: 100%;
-	height: auto;
-	display: block;
-	margin: 0 auto;
+    width: 100vw; 
+    max-width: 100%; 
+    height: auto; 
+    display: block; 
+    margin: 0; 
 }
 
 
