--- a/styles/home.css
+++ b/styles/home.css
@@ -334,6 +334,7 @@ footer nav {
 		display: grid;
 		grid-template-rows: repeat(2, 1fr);
 		gap: 2.4rem;
+		padding: 10rem 5rem 5rem 5rem;
 	}
 	.hero-text-container{
 		margin-right: 0;
@@ -348,6 +349,9 @@ footer nav {
 }
 
 @media (max-width: 530px) {
+	.section-hero{
+		padding: 10rem 5rem 0 5rem;
+	}
 	.cta-section {
 		margin: 0 1rem 6.8rem 1rem;
 		text-align: center;
