--- a/styles/telaviv.css
+++ b/styles/telaviv.css
@@ -10,8 +10,9 @@
     font-family: "Roboto", sans-serif;
 }
 
-html ,body{
+html {
     font-size: 62.5%;
+    overflow-x: hidden;
 }
 
 .flex-center {
@@ -48,11 +49,18 @@ main {
 .main-image-top {
     width: 100vw; 
     max-width: 100%; 
-    height: auto; 
+    height: 100vh; 
     display: block; 
     margin: 0; 
 }
 
+.icon {
+    font-size: 1.8rem;
+    color: #e5e7fb;
+}
+.icon:hover {
+    color: #3882f6;
+}
 
 /*************************************************************/
 /************************** navigation ***********************/
@@ -264,14 +272,11 @@ header {
             font-size: 16px;
         }
         button:hover{
-            font-size: 18px;
-            font-weight: bold;
-            box-shadow: #E5E7EB 0px 2px;
-
-            transition: 400ms;
+            background: #2565eb;
         }
     }
 }
+
 
 /*************************************************************/
 /**************************** footer *************************/
@@ -290,43 +295,6 @@ footer nav {
 	margin-top: 1.2rem;
 	padding: 1.2rem 0;
 }
-
-footer {
-	background: #1f2937;
-	color: #e5e7fb;
-	font-size: 1.5rem;
-}
-
-footer p {
-	margin-top: 2.4rem;
-}
-
-footer nav{
-	gap: 1.2rem;
-	margin-top: 1.2rem;
-	padding: 1.2rem 0;
-}
-
-.flex-center{
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-
-.flex-column{
-	flex-direction: column;
-}
-
-.icon {
-	font-size: 1.8rem;
-	color: #e5e7fb;
-}
-
-.icon:hover {
-	color: #3882f6;
-
-}
-
 
 @media(max-width:768px){
 	header {
